--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,14 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Karrik Regular;
-
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
 }
 
 @font-face {
@@ -16,26 +23,29 @@ html, body {
 }
 
 #h1 {
-  width: 15%;
-  margin: 0;
-  padding-top: 20px;
-  padding-left: 20px;
-  font-size: 10em;
-  color: black;
+  position: fixed;
+  margin: 20px;
+  left: 1350px;
+  width: 17%;
 }
 
-#type {
+#draggable {
   position: absolute;
-  top: 200px;
-  text-align: center;
-  color: black;
-  font-size: 3em;
-  margin-left: 300px;
+  left: 200px;
+  background: white;
+  width: 300px;
+  height: 450px;
+  border: 1.5px black solid;
+  top: 60px;
   text-align: left;
-  width: 70%;
-  height: 100%;
+  color: black;
+  font-size: 2.4em;
+  padding: 20px;
   z-index: 10;
+  color: #39ff14;
+/*  box-shadow: 1px 1px 2px grey, 0 0 25px #39ff14, 0 0 5px #39ff14; */ 
 }
+
 
 
 canvas {
@@ -46,10 +56,10 @@ canvas {
 }
 
 .header {
+  background-color: green;
   position: fixed;
-  width: 50%;
   top: 900px;
-  left: 1150px;
+  left: 1450px;
   margin-top: 40px;
   font-size: 100px;
   line-height: 1;
@@ -57,44 +67,6 @@ canvas {
   z-index: 1;
 }
 
-.profile {
-  position: fixed;
-  top: 180px;
-  left: 1200px;
-  z-index: 1;
-  font-weight: 100;
-  font-size: 15px;
-}
-
-.custom-file-input.sel {
-  border: 1px solid green;
-}
-
-.custom-file-input {
-  color: transparent;
-}
-
-.custom-file-input::-webkit-file-upload-button {
-  visibility: hidden;
-}
-
-.custom-file-input::before {
-  content: '📷';
-  color: black;
-  display: inline-block;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-weight: 400;
-  font-size: 35px;
-}
-
-#blah {
-  top: 50px;
-  width: 100%;
-  z-index: 2;
-  clip-path: circle(120px at center);
-}
 
 .button {
   outline-style: ;
@@ -109,50 +81,19 @@ canvas {
   font-weight: 400;
   font-size: 35px;
   font-family: Karrik Regular;
-  ;
-}
-
-a.archive {
-  bottom: 38.5px;
-  position: absolute;
-  display: inline-block;
-  margin-bottom: 0;
-  font-family: Karrik Regular;
-  ;
-  font-weight: 400;
-  font-size: 35px;
-  left: 326px;
-  color: black;
-  text-decoration: none;
-}
-
-a.archive:hover {
-  bottom: 38.5px;
-  position: absolute;
-  display: inline-block;
-  margin-bottom: 0;
-  font-family: Karrik Italic;
-  font-weight: 400;
-  font-size: 35px;
-  left: 326px;
-  color: black;
-  text-decoration: none;
+  z-index: 11;
 }
 
 button:hover {
   cursor: pointer;
+  color: #39ff14;
   font-family: Karrik Italic;
 }
 
-.avatar {
-  position: absolute;
-  top: 450px;
-  left: 50px;
-  z-index: 4;
-}
-
 #avatar {
-  width: 40%;
+  position: fixed;
+  margin: 10px;
+  top: 550px;
+  left: 20px;
+  width: 20%;
 }
-
-audio {}
